// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactMarkdownWrapper component should be rendered correctly 1`] = `
<ReactMarkdown
  className={undefined}
  escapeHtml={true}
  renderers={
    Object {
      "heading": [Function],
      "link": [Function],
    }
  }
  skipHtml={false}
  source="Test [link]() __strong__"
  transformLinkUri={[Function]}
/>
`;

exports[`ReactMarkdownWrapper component should handle correctly markdown with emojis 1`] = `
<ReactMarkdown
  className={undefined}
  escapeHtml={true}
  renderers={
    Object {
      "heading": [Function],
      "link": [Function],
    }
  }
  skipHtml={false}
  source="### Heading 3

This is a \`test\` <img src=\\"/emoji-data/img-apple-64/1f389.png\\" class=\\"emoji\\" data-codepoints=\\"1f389\\" />"
  transformLinkUri={[Function]}
/>
`;

exports[`ReactMarkdownWrapper component should have correct heading renderer options 1`] = `
<h3
  className="md-title md-title--h3"
>
  MyHeading
</h3>
`;

exports[`ReactMarkdownWrapper component should have correct link renderer options 1`] = `
<a
  href="#"
  target="_blank"
>
  <div />
</a>
`;
